--- a/build.xml
+++ b/build.xml
@@ -75,6 +75,8 @@
 	            <fileset dir="ExterneJar"/>
         </copy>
         
+	        	      <copy todir="jar" file="conf.properties"/>
+        
 	    </target> 
 	    <target name="export">
 	        <!--<scp trust="true" todir="pi@88.166.207.71:/home/pi/jar" password="Marseille13!" port="2221">-->
