add some things

--- a/conf.properties
+++ b/conf.properties
@@ -4,5 +4,6 @@ iftttsms=true
 iftttnotif=true
 autoopendoor=true
 compte=c1
-interval=5000
+interval=0
 iftttkey=cRY4eknJmi0dHdN7egeyLE
+logfile=log
