--- a/conf.properties
+++ b/conf.properties
@@ -7,3 +7,8 @@ compte=c1
 interval=800
 iftttkey=cRY4eknJmi0dHdN7egeyLE
 logfile=/home/pi/IntercomPi/log
+timeoutAppel=2000
+amplificationAppel=1.0
+private String udpSend = "/usr/bin/gst-launch-0.10 alsasrc device=hw:0 ! capsfilter caps=audio/x-raw,rate=44100 ! audioconvert ! audioresample ! audio/x-raw, rate=6000, channels=1 ! speexenc quality=5 ! rtpspeexpay ! udpsink host=myip port=myport";
+private String udpReceive = "/usr/bin/gst-launch-0.10 udpsrc port=myport caps=\"application/x-rtp, media=(string)audio, clock-rate=(int)6000, encoding-name=(string)SPEEX\" ! rtpjitterbuffer latency=150 do-lost=true ! rtpspeexdepay ! speexdec ! audioconvert ! audioresample ! audio/x-raw, rate=44100 ! audioamplify amplification=myamp ! alsasink device=hw:1";
+   
